[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxel-sdk"
version = "0.1.0"
description = "SDK for Voxel project"
authors = [
    {name = "Voxel Team"},
]
dependencies = []
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/voxel-project/voxel-sdk"
Repository = "https://github.com/voxel-project/voxel-sdk"

[tool.hatch.build.targets.wheel]
packages = ["voxel_sdk"]